# WeissueHotOffers

./: README.md  logging.ini  main.py  pyproject.toml
modules/: channel_object.py  editing_preview.py  filtering_products.py  publication_channel.py  run_chromedriver.py  run_pyppeteer.py  xpath_element.py
src/OZON/: parser_management_ozon.py  product_card.py
src/WB/: filtering_products.py  parser_management_wb.py  product_card.py  run_parser.py
src/WB/module/: parser_management.py  product_card.py  publication_channel.py
src/bots/admin/: admin_commads.py  admin_message.py
src/bots/module/: create_channel.py  keyboard.py
tests/: test_card_product.py  test_parse.py
utils/: api_request.py  mysql.py  run_threading.py
