[tool.poetry]
name = "weissuehotoffers"
version = "0.1.0"
description = ""
authors = ["JackQweata <dahil3@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
selenium = "^4.9.0"
webdriver-manager = "^3.8.6"
fake-headers = "^1.0.2"
python-decouple = "^3.8"
pytelegrambotapi = "^4.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
